data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_679.wast
;; 10. **Test 10: Incorrect Evaluation with Combined Arithmetic Expressions**     - Use a `br_if` instruction with a condition that involves a combination of arithmetic operations (`i32.add`, `i32.mul`, etc.) and verify correct evaluation leading to the expected branch.     - **Constraint Checked**: Precision in the evaluation of arithmetic expressions as conditions for branching.  These test descriptions identify potential differential behavior when incorrect condition evaluation affects branch decisions, in accordance with the specific operand and stack management handling differences in the `br` instruction implementations.

(assert_invalid
  (module
    (func $incorrect-arithmetic-evaluation
      (block
        (i32.const 10)
        (i32.const 20)
        (i32.add)
        (i32.const 30)
        (i32.mul)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)